--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap');
+@import 'variables.scss';
+
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -12,3 +15,14 @@ body {
     margin: 0;
     min-height: 100vh;
 }
+
+
+h1 {
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 1px;
+    color: var(--main-text);
+    margin: 0;
+}
+
