Стили в компоненте Card

--- a/src/app/contact/card/card.component.scss
+++ b/src/app/contact/card/card.component.scss
@@ -12,14 +12,14 @@
             font-size: 16px;
             line-height: 24px;
             letter-spacing: 0.15px;
-            color: #000000;
+            color: var(--black);
             margin-bottom: 10px;
         }
 
         &_job {
             font-size: 12px;
             line-height: 14px;
-            color: #A6AAAD;
+            color: var(--toogle-un-check);
             margin-bottom: 10px;
 
             p {
@@ -31,12 +31,12 @@
     &__contact {
         font-size: 12px;
         line-height: 14px;
-        color: #212121;
+        color: var(--black-text);
 
         a {
             display: block;
             text-decoration: none;
-            color: #212121;
+            color: var(--black-text);
         }
     }
 }
