--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,6 +4,7 @@
     --black:           #000000;
     --primary:         #333333;
     --main-text:       #282B2E;
+    --black-text:      #212121;
     --element:         #6E767D;
     --active:          #ED1C24;
     --toogle-check:    #80858a;
